mdapioutput/objects/Store__c.object
<CustomObject>
    <fields>
        <fullName>AddressId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipName>Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsMain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <formula>Owner:User.LastName +&apos; | &apos;+AddressId__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationDate__c</fullName>
        <label>Validation Date</label>
        <type>Date</type>
    </fields>
    <label>Storage Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Store__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>STORE-{0000}</displayFormat>
        <label>Store Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Storage Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>